--- a/src/styles/my-font-reset.css
+++ b/src/styles/my-font-reset.css
@@ -6,7 +6,7 @@
 /** small screen of 0px to 608px */
 /* body */
 body {
-  font-size: 14px;
+  font-size: 16px;
 }
 /* text elements */
 h1,
